# SaloMed

./: .gitignore  README.md  package.json  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  backend.py  backend_old.py  check_sdk.py  check_sdk_2.py  fix_vault.py  main.py  main_old.py  merge_script.py  requirements.txt
contracts/lusog_chain/: Cargo.toml
contracts/lusog_chain/src/: lib.rs  tests.rs
contracts/lusog_chain/test_snapshots/tests/: test_happy_path_create_and_pay.1.json  test_patient_records_tracked.1.json
contracts/salomed/: Cargo.toml  build_out.txt
contracts/salomed/src/: lib.rs  tests.rs
contracts/salomed/test_snapshots/tests/: test_award_points_updates_vault.1.json  test_credit_tier_bronze_to_silver_to_gold.1.json  test_deposit_creates_vault_with_correct_balance.1.json  test_double_initialize_rejected.1.json  (+8 more)
frontend/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/components/: BillScanner.tsx  FreighterTopUpModal.tsx  GCashModal.tsx  LanguageSelectionModal.tsx  LoanModal.tsx  LoanTab.tsx  OnboardingSlides.tsx  PayModal.tsx  PaymentTab.tsx  ProviderCombobox.tsx  QRPaymentConfirmModal.tsx  QRScannerModal.tsx  RemittanceForm.tsx  SplashScreen.tsx  TransactionsTab.tsx  VaultCard.tsx
frontend/lib/: api.ts  config.ts  contract.ts  freighter.ts  transactions.ts  wallet-context.tsx  whitelist.ts
frontend/lib/i18n/: LanguageContext.tsx  translations.ts
(+5 files in other folders)
