[package]
name = "lusog_chain"
version = "0.1.0"
edition = "2021"
description = "On-chain hospital billing and receipt verification on Stellar Soroban"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.7.6"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true